# scrfd_track

./: CMakeLists.txt  det_2.5g.mnn
exec/: main.cpp  scrfd_track.cpp
src/: model_load.h
